#minor rust-aws-lambda-template

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,20 +10,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Build program
-      run: cargo build
+    - name: Ensure that x86_64-unknown-linux-musl target is installed
+      run: rustup target add x86_64-unknown-linux-musl
     - name: Check formatting
       run: cargo fmt --all -- --check
     - name: Check README.md synchronization
       run: |
         cargo install --force cargo-sync-readme
         cargo sync-readme -c
-    - name: Execute tests
-      run: cargo test
     - name: Scan code
       run: |
         rustup component add clippy
         cargo clippy --all-targets --all-features -- -D warnings
+    - name: Execute tests
+      run: make test
+    - name: Build function
+      run: make build
+  
 
   tag:
     if: github.ref == 'refs/heads/master'
