--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - name: Ensure musl is installed
+      run: apt-get install -y musl
     - name: Ensure that x86_64-unknown-linux-musl target is installed
       run: rustup target add x86_64-unknown-linux-musl
     - name: Check formatting
