--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Ensure musl is installed
-      run: sudo apt-get install -y musl
+      run: sudo apt-get install -y musl musl-tools
     - name: Ensure that x86_64-unknown-linux-musl target is installed
       run: rustup target add x86_64-unknown-linux-musl
     - name: Check formatting
@@ -28,7 +28,6 @@ jobs:
       run: make test
     - name: Build function
       run: make build
-  
 
   tag:
     if: github.ref == 'refs/heads/master'
