--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Ensure musl is installed
-      run: sudo apt-get install -y musl musl-tools
+      run: sudo apt-get install -y musl musl-dev musl-tools
     - name: Ensure that x86_64-unknown-linux-musl target is installed
       run: rustup target add x86_64-unknown-linux-musl
     - name: Check formatting
