+ added env variable to make build to specify gcc

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Execute tests
       run: make test
     - name: Build function
-      run: make build
+      run: GCC=musl-gcc make build
 
   tag:
     if: github.ref == 'refs/heads/master'
